INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src ${VLE_INCLUDE_DIRS}
  ${GVLE_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS}
  ${GTKSOURCEVIEWMM_INCLUDE_DIRS})

LINK_DIRECTORIES(${VLE_LIBRARY_DIRS} ${GVLE_LIBRARY_DIRS}
  ${GTKSOURCEVIEWMM_LIBRARY_DIRS})

ADD_LIBRARY(modeling-RR-simple SHARED Simple.hpp Simple.cpp FileNames.hpp FileNames.cpp)

SET_TARGET_PROPERTIES(modeling-RR-simple PROPERTIES OUTPUT_NAME
  "RecurrenceRelation")

TARGET_LINK_LIBRARIES(modeling-RR-simple
  ${GVLE_LIBRARIES} ${GTKSOURCEVIEWMM_LIBRARIES} ${Boost_LIBRARIES})

INSTALL(TARGETS modeling-RR-simple RUNTIME DESTINATION
  plugins/gvle/modeling LIBRARY DESTINATION plugins/gvle/modeling)

INSTALL(FILES RecurrenceRelation.glade DESTINATION
  plugins/gvle/modeling)
